# libftpp

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  Makefile  README.md  client_test  data_structure.hpp  launch_test.sh  libftpp.hpp  main_client_test  main_server_test  pool_test
data_buffer/: data_buffer.cpp  data_buffer.hpp  data_buffer_test.cpp  test.cpp
docs/html/: IObserver_8hpp_source.html  _2home_2anthony_2Documents_2libftpp_2src_2bonus_2chronometre_2chronometre_8hpp-example.html  _2home_2anthony_2Documents_2libftpp_2src_2bonus_2logger_2logger_8hpp-example.html  _2home_2anthony_2Documents_2libftpp_2src_2network_2message_2message_8hpp-example.html  annotated.html  annotated_dup.js  chronometre_8hpp_source.html  classChronometre-members.html  classChronometre.html  classChronometre.js  classClient-members.html  classClient.html  classClient.js  classDataBuffer-members.html  classDataBuffer.html  classDataBuffer.js  classIObserver-members.html  classIObserver.html  classIObserver.js  classLogLevel.html  classLogger-members.html  classLogger.html  classLogger.js  classMemento-members.html  classMemento.html  classMemento.js  classMemento_1_1Snapshot-members.html  classMemento_1_1Snapshot.html  classMemento_1_1Snapshot.js  classMessage-members.html  classMessage.html  classMessage.js  classNAryTree-members.html  classNAryTree.html  classNAryTree.js  classNode-members.html  classNode.html  classNode.js  classObservableValue-members.html  classObservableValue.html  (+157 more)
docs/latex/: _2home_2anthony_2Documents_2libftpp_2src_2bonus_2chronometre_2chronometre_8hpp-example.tex  _2home_2anthony_2Documents_2libftpp_2src_2bonus_2logger_2logger_8hpp-example.tex  _2home_2anthony_2Documents_2libftpp_2src_2network_2message_2message_8hpp-example.tex  annotated.tex  classChronometre.tex  classClient.tex  classDataBuffer.tex  classIObserver.tex  classLogLevel.tex  classLogger.tex  classMemento.tex  classMemento_1_1Snapshot.tex  classMessage.tex  classNAryTree.tex  classNode.tex  classObservableValue.tex  classObserver.tex  classPerlinNoise2D.tex  classPersistentWorker.tex  classPool.tex  classPool_1_1Object.tex  classRandom2DCoordinateGenerator.tex  classRingBuffer.tex  classServer.tex  (+15 more)
pool/: pool.hpp  pool.tpp  test  test.cpp
programServer/: main.cpp
programStressTesteur/: main.cpp
school_test/: main_client.cpp  main_observer.cpp  main_perlin_2D.cpp  main_persistant_worker.cpp  main_random_2D_coordinate_generator.cpp  main_server.cpp  main_singleton.cpp  main_thread.cpp  main_thread_safe_iostream.cpp  main_thread_safe_queue.cpp  main_vector_2.cpp  main_vector_3.cpp  main_worker_pool.cpp
tests/: launch_test.sh  main_client_test  main_data_buffer_test  main_memento_test  main_observer_test  main_perlin_2D_test  main_persistant_worker_test  main_pool_test  main_random_2D_coordinate_generator_test  main_server_test  main_singleton_test  main_state_machine_test  main_thread_safe_iostream_test  main_thread_safe_queue_test  main_thread_test  main_vector_2_test  main_vector_3_test  main_worker_pool_test  test_client.cpp  test_data_buffer.cpp  test_ivector3.cpp  test_memento.cpp  test_message.cpp  test_observable_value.cpp  test_observer.cpp  test_perlin_noise.cpp  test_pool.cpp  test_random_2D_coordinate_generator.cpp  test_ring_buffer.cpp  test_server.cpp  test_singleton.cpp  test_state_machine.cpp  test_thread.cpp  test_thread_safe_iostream.cpp  test_thread_safe_queue.cpp  test_worker_pool.cpp
(+144 files in other folders)
